export interface Empresa {
  razaoSocial: string
  cnpj: number
}
