export enum StatusPedido {
  PENDENTE = "pendente",
  PAGO = "pago",
  ENVIADO = "enviado",
  ENTREGUE = "entregue",
}
